<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/movie_detail_overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/movie_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/released_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_genres"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/movie_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_info"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/movie_detail_videos"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/videos_recycler"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/produced_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_detail_produced_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/production_companies_recycler"
            android:layout_width="match_parent"
            android:layout_height="140dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>